assets/css/style.css
*{
    margin: 0px;
    padding: 0px;
    box-sizing: border-box;
    font-family: 'Roboto Mono', monospace;
    
}

.color{
    background-color: red;
}

ul{
    list-style: none;
}


/* Navbar */
ul.ui-autocomplete {  cursor: default; background:#314754;}   
ul.ui-menu .ui-menu-item a {
    color:#fff;
}
/* workarounds */
html .ui-autocomplete { position: absolute; top:70px; left: 532px; width:1px; } /* without this, the menu expands to 100% in IE6 */
ul.ui-menu {
    list-style:none;
    padding: 2px;
    margin: 0;
    display:block;
    float: left;
}


nav{
    z-index: 20;
    position: fixed;
    width: 100%;
}

nav ul{
    display: flex;
    list-style: none;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
    background: #314754;
    color: white;
    border: none ;
    height: 70px auto;
}

nav .ms-n5 {
    margin-left: -40px;
}

nav ul .logo{
    border: 0px;
    padding:0; 
    margin:0;
    border-collapse: collapse; font-size: 40px; 
    text-decoration: none; 
    color:white; 
    text-shadow: -10px 8px 2px rgb(49, 49, 49);
}

nav ul .items{
    padding: 0 20px;
    display: inline-flex;
}

nav ul .items a{
    color: #ffff;
    text-decoration: none;
    font-size: 25px;
    margin: 0 0 0px 50px;
    padding: 0 2px;
}

nav ul .items a:hover{
    background-color: #7C9784;
}

nav ul .items img{
    margin-left: 80px;
}

nav ul .search-icon{
    display: flex;
    margin: 0 90px 0 0;
}

nav ul .search-icon input{
    width: 400px;
    height: 40px;
    border: none;
    outline: none;
    padding: 0 10px;
    color: #000;
    font-size: 16px;
    border-radius: 20px;
    padding-left: 70px;
}

nav ul .icon{
    align-items: center;
    position: relative;
    left: 50px;
}

.menuimage img{
    margin:0 20px;
    cursor: pointer;
}

/* Navbar Sub Menu */

.settings-menu{
    position: absolute;
    width: 90%;
    max-width: 250px;
    height: 200px;
    background: #314754;
    border-radius: 4px;
    overflow: hidden;
    top: 60px;
    right: 0.05%;
    padding: 10px 0 10px 30px;
    border-radius: 0px 0px 0px 50px;
    max-height:0;
    transition: max-height 0.3s;
    visibility: hidden;
}

.settings-menu-height{
    max-height: 200px;
    visibility: visible;
    z-index: 2;
}
.settings-menu img{
    width: 60px;
    height: 60px;
    border-radius: 50%;
    background-color: white;
}

.settings-menu .row a{
    display: absolute;
    font-size: 12px;
    text-decoration: none;
    font-size: 20px;
    font-weight: bold;
}

.settings-menu .row a p{
    max-width: 14ch;
}

.settings-menu hr{
    margin-top: 10px;
}

.settings-menu-inner a{
    color: white;
    text-decoration: none;
    font-size: 20px;
}


.settings-menu-inner p, .profile h2, .homethread .toppost h4, .threadcreatorname h3,
.reaction input, .totalcomments input, .profilecontent h4{
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

.userpic{
    height: 53px;
    width: 53px;
    background: #FFF;
}



/* Modal Banner and Profile */

.covermodal{
    background-color: rgba(0,0,0, 0.9);
    width:100vw;
    height: 100vh;
    position: fixed;
    z-index: 10;
    opacity: 0;
    visibility: hidden;
    transition: all .5s;
}

#coverpage:target, #profilepage:target{
    opacity: 1;
    visibility: visible;
}
    
.changecover_profile{
    width: 500px;
    height: 400px;
    background-color: #FEDB97;
    margin: 150px 0 0 470px;
    position: absolute;
}

.navbarsmall {
    background-color: #314754;
    width: 100%;
    height: 40px;
}

.changecover_profile .imagesmall{
    width: 100%;
    height: 35%;
}

.profilesmall{
    position: absolute;
    width: 100px;
    height: 100px;
    background: #E5E5E5;
    border: solid 1px #314754;
    margin-top: -15%;
    margin-left: 5%;
    flex-wrap: wrap;
    z-index: 2;
}

.smallcontent input{
    margin: 20px 0 0 140px;
}

#coverpage .smallcontent h4{
    margin: 10px 0 0 150px;
    font-weight: bold;
}

.smallcontent button{
    padding: 8px 20px;
    background-color: #7C9784;
    font-weight: bold;
    border: none;
    border-radius: 10%;
    color: white;
    cursor: pointer;
}

#coverpage .smallbutton1{
    margin: 60px 0 0 40px;
}

#coverpage .smallbutton2, #profilepage .smallbutton2 {
    margin: -40px 0 0 360px;
    position: absolute;
}

.smallcontent button:hover{
    background-color: #314754;
    color: white;
}

.reviewprofile{
    width: 200px;
    height: 200px;
    margin-top: 10px;
    margin-left: 150px;
    border: solid 1px black;
    background-color: white;
}

.reviewprofile img{
    width: 100%;
    height: 100%;
}

#profilepage .smallbutton1{
    margin: 30px 0 0 40px;
}

#profilepage .smallcontent h4{
    text-align: center;
    margin-top: 10px;
    font-weight: bold;
}

/* Banner Photo */
.cover{
    padding-top: 60px;
    position: relative;
    background-repeat: no-repeat;
    height: 430px;
}

/* lagyan ng  object-fit: cover; sa #coverphoto at #profilephoto pag ayaw na narereduce yung height nung picture */
#coverphoto, #profilephoto{
    height: 100%;
    width: 100%;
}

.cover .bannercrud{
    background: #7C9784;
    width: 175px;
    height: 45px;
    top: 385px;
    left: 87%;
    padding: 10px;
}
.bannercrud{
    position: absolute;
    color: white;
}

.bannercrud h6{
    font-family: Roboto;
    font-weight: bold;
    font-size: 20px;    
    cursor: pointer;
}

.bannercrud img{
    margin-top: -44px;
    float: right;
    cursor: pointer;
}

.photomenu{
    position: absolute;
    right: 0.1px;
    margin-top: 2px;
    background-color: #314754;
    display: none;
}

.photomenu li, .profilelabel ul li{
    padding: 0 15px 0 10px;
    margin: 10px 0 0 10px;
}

.photomenu li a{
    text-decoration: none;
    color: white;
    padding: 8px;
}

.photomenu li button{
    background-color:#314754;;
    border: none;
    color: white;
    padding: 8px;
}

.bannercrud:hover .photomenu{
    display: block;
    width: 175px;
    height: 90px;
}
/* ... */

